# Decision-State-Space-Engine

./: .gitignore  README.md  install-pgvector.sh  pyproject.toml
data/cases/strategic-multi-lane-deadlock/: case.json
data/cases/strategic-multi-lane-deadlock/artifacts/emails/: 001_finance_position.eml  006_beta_security_clarification_b.eml  008_coredesk_free_onboarding.eml  009_delta_subcontractor_reveal.eml  013_legal_fallback_update.eml  014_beta_exploding_deadline.eml
data/cases/strategic-multi-lane-deadlock/artifacts/events/: 008_coredesk_free_onboarding.json  010_requester_deadline_change.json  013_legal_fallback_update.json  015_final_finance_exception.eml
data/cases/strategic-multi-lane-deadlock/artifacts/transcripts/: requester_call.txt
data/cases/strategic-multi-lane-deadlock/baseline/: constraints.json  stakeholders.json
data/cases/strategic-multi-lane-deadlock/routes/: alpha_close.json  beta_fail.json  coredesk_compromise.json  deadlock.json
src/dsse/: cli.py  config.py  db.py  engine.py  models.py  rendering.py  scenario_loader.py  scoring.py  setup_manager.py  storage.py  tutorial.py
src/dsse/data/cases/strategic-multi-lane-deadlock/artifacts/emails/: 002_legal_position.eml  (+6 more)
src/dsse/data/cases/strategic-multi-lane-deadlock/baseline/: providers.json
src/dsse/data/cases/strategic-multi-lane-deadlock/routes/: alpha_close.json  beta_fail.json  coredesk_compromise.json  deadlock.json
tests/: conftest.py  test_cli.py  test_cli_flow_text.py  test_config.py  test_engine.py  test_loader.py  test_runtime_persistence.py  test_scoring.py
(+7 files in other folders)
