[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsse"
version = "0.2.0"
description = "Decision State Space Engine with negotiation as the first domain pack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "networkx>=3.2",
  "psycopg[binary]>=3.2",
  "huggingface_hub>=0.24"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dsse = "dsse.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dsse = ["data/cases/**/*.json", "data/cases/**/*.pdf", "data/cases/**/*.eml"]
